--- a/.github/workflows/myworkf.yml
+++ b/.github/workflows/myworkf.yml
@@ -10,32 +10,26 @@ on:
   pull_request:
     branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# A workflow run is made up of one or more jobs that can run sequentially or in paralle 
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: install NodeJS
+    - name: Setup Node
       uses: actions/setup-node@v2-beta
       with:
-        node-version: 12
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install # will run `yarn install` command
-      
+          node-version: 12
+
     - name: Build React App
-      run: yarn build
-      
+      run: |
+        npm install # Install Dependencies
+        CI=false npm run build # CI=false to ignore warnings
+
     - name: Install Surge
       run: npm install -g surge
-      
-    - name: Deploy to surge
+
+    - name: Deploy to Surge
       run: surge ./build demo_card.surge.sh --token ${{secrets.SURGE_TOKEN}}
